k8s/storage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: storage
  labels:
    name: storage
    app.kubernetes.io/name: storage
    app.kubernetes.io/part-of: gardenos
